Mon Feb 11 01:32:19 UTC 2013  Phil Mesnier  <mesnier_p@socket.net>

        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connector.cpp:

          Fix Coverity 310907. Resource leak.

        * tao/IORManipulation/IORManip_IIOP_Filter.cpp:

          Fix Coverity 300639. Resource leak.

Fri Feb  8 22:28:42 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Dynamic_TP/DTP_ORBInitializer.cpp:

          Fix Coverity 972925. Unchecked dynamic cast.

        * tao/Dynamic_TP/DTP_Task.cpp:

          Fix Coverity 972742. Unintialized members.

        * tao/PortableServer/ServantRetentionStrategyNonRetain.h:
        * tao/PortableServer/ServantRetentionStrategyNonRetain.cpp:

          Fix Coverity 972992. Stray pointer arethmetic.

        * utils/logWalker/GIOP_Buffer.cpp:

          Fix Coverity 972917. Logically dead code.

        * utils/logWalker/Log.cpp:

          Fix Coverity 972930. Potential null dereference.

Fri Feb  8 21:43:54 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Server.cpp:

        Fix Coverity 972933.  Variable "IORM" Resource Leak.

Fri Feb  8 19:25:49 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_PG_Group_Factory.cpp:

          Fix Coverity 972923. Unchecked dynamic_cast.

        * orbsvcs/orbsvcs/PortableGroup/PG_Group_Factory.cpp:

          Fix Coverity 972924. Unchecked dynamic_cast.

        * orbsvcs/orbsvcs/PortableGroup/PG_Group_List_Store.cpp:

          Fix Coverity 972907.  Unchecked return value.

        * tao/Invocation_Retry_State.cpp:

          Fix Coverity 972908. Unchecked return value.

        * tao/Storable_File_Guard.cpp:

          Fix Coverity 972943. Uninitialized pointer field.

        * tests/Storable/test.cpp:

          Fix Coverity 972939. Uncaught exception.

Fri Feb  8 19:10:05 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/nsgroup_svc.cpp:
